<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".LoginActivity">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:background="@android:color/white"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/logo"
                android:scaleType="fitCenter">

            </androidx.appcompat.widget.AppCompatImageView>
            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_marginBottom="3dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_marginRight="3dp"
                            android:layout_width="60dp"
                            android:scaleType="centerCrop"
                            android:layout_height="match_parent"
                            android:background="@drawable/user">

                        </ImageView>
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/txtusuarioLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_usuario"
                            android:textAlignment="center"
                            >
                        </androidx.appcompat.widget.AppCompatEditText>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_marginRight="3dp"
                            android:background="@drawable/pass"
                            android:scaleType="centerCrop"
                            android:layout_height="match_parent"
                            android:layout_width="60dp">
                        </ImageView>
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/txtPassLogin"
                            android:textAlignment="center"
                            android:hint="@string/hint_contraseña"
                            android:inputType="textPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        </androidx.appcompat.widget.AppCompatEditText>
                    </LinearLayout>
                </LinearLayout>
                <Button
                    android:text="@string/btn_Ingresar"
                    android:theme="@style/RaisedButtonDark"
                    android:id="@+id/btn_Ingresar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Button>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/config_login"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:background="@drawable/configlogin"></ImageButton>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/common_google_signin_btn_icon_dark_focused"></ImageButton>

        <ImageButton
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:background="@drawable/facebook">
        </ImageButton>
    </LinearLayout>






</LinearLayout>